alignment fix

--- a/src/app/views/landing/ListingDetailOne/ListingDetailOne.component.scss
+++ b/src/app/views/landing/ListingDetailOne/ListingDetailOne.component.scss
@@ -3836,6 +3836,11 @@ border-radius: 10px;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.text-form{
+  background: none !important;
+  border: 1px solid #d9cbcb;
+
+}
 .contact-form h4 {
   text-align: center;
   font-weight: bold;
